--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trimino Puzzle</title>
+    <title>Tromino Puzzle</title>
     <link rel="stylesheet" href="styles/style.css" />
     <!-- <link rel="shortcut icon" href="favicon.png"> -->
     <script
-      src="scripts/trimino-puzzle-wasm.js"
+      src="scripts/tromino-puzzle-wasm.js"
       type="text/javascript"
     ></script>
-    <script src="scripts/trimino-puzzle.js" type="text/javascript"></script>
+    <script src="scripts/tromino-puzzle.js" type="text/javascript"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
   </head>
   <body>
-    <h1>Trimino Puzzle</h1>
+    <h1>Tromino Puzzle</h1>
     <canvas id="boardCanvas" width="512" height="512"></canvas>
 
     <div class="container">
