--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Omar Boukli-Hacene">
+    <meta name="application-name" content="Tromino Puzzle">
+    <meta name="description" content="A web app, that makes use of WebAssembly, to solve the tromino puzzle.">
     <title>Tromino Puzzle</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <!-- <link rel="shortcut icon" href="favicon.png"> -->
-    <script
-      src="scripts/tromino-puzzle-wasm.js"
-      type="text/javascript"
-    ></script>
-    <script src="scripts/tromino-puzzle.js" type="text/javascript"></script>
-    <script src="scripts/app.js" type="text/javascript"></script>
   </head>
   <body>
     <h1>Tromino Puzzle</h1>
+    <h2>WebAssembly solver and SDL2 renderer</h2>
+    <canvas id="canvas" width="512" height="512"></canvas>
+
+    <h2>WebAssembly solver, plain JavaScript renderer</h2>
     <canvas id="boardCanvas" width="512" height="512"></canvas>
 
     <div class="container">
@@ -26,7 +26,7 @@
               type="number"
               id="order"
               placeholder="2, 4, 8, 16, ..."
-              value="64"
+              value="32"
             />
           </li>
           <li>
@@ -35,7 +35,7 @@
               type="number"
               id="markX"
               placeholder=""
-              value="29"
+              value="13"
             />
           </li>
           <li>
@@ -44,7 +44,7 @@
               type="number"
               id="markY"
               placeholder=""
-              value="59"
+              value="17"
             />
           </li>
           <li>
@@ -53,5 +53,10 @@
         </ul>
       </form>
     </div>
+
+    <script defer src="scripts/tromino-puzzle-alg-wasm.js" type="text/javascript"></script>
+    <script defer src="scripts/tromino-puzzle-gfx2d-wasm.js" type="text/javascript"></script>
+    <script defer src="scripts/tromino-puzzle.js" type="text/javascript"></script>
+    <script defer src="scripts/app.js" type="text/javascript"></script>
   </body>
 </html>
