--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -15,11 +15,13 @@
 
       <div class="columns">
         <div class="column">
-          <h2>WebAssembly solver and SDL2 renderer</h2>
+          <h2>WebAssembly solver and renderer</h2>
+          <p>Algorithm in pure C, with C++/SDL2 renderer (WebAssembly)</p>
           <canvas id="canvas" width="512" height="512"></canvas>
         </div>
         <div class="column">
-          <h2>WebAssembly solver, plain JavaScript renderer</h2>
+          <h2>Hybrid WebAssembly/JavaScript</h2>
+          <p>Pure C solver (WebAssembly) with JavaScript renderer</p>
           <canvas id="boardCanvas" width="512" height="512"></canvas>
         </div>
       </div>
@@ -57,6 +59,10 @@
         </ul>
       </form>
     </div>
+
+    <footer>
+      <p>Copyright &copy; 2021 Omar Boukli-Hacene.</p>
+    </footer>
 
     <script defer src="scripts/tromino-puzzle-alg-wasm.js" type="text/javascript"></script>
     <script defer src="scripts/tromino-puzzle-gfx2d-wasm.js" type="text/javascript"></script>
