Improve JavaScript renderer

--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <form>
+      <form id="puzzleEditorForm">
         <ul class="flex-outer">
           <li>
             <label for="order">Puzzle order</label>
