--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -54,7 +54,7 @@
             />
           </li>
           <li>
-            <button id="solveButton" type="button">Solve</button>
+            <button id="solveButton" type="button" disabled>Solve</button>
           </li>
         </ul>
       </form>
@@ -64,7 +64,6 @@
       <p>Copyright &copy; 2021 Omar Boukli-Hacene.</p>
     </footer>
 
-    <script defer src="scripts/tromino-puzzle-alg-wasm.js" type="text/javascript"></script>
     <script defer src="scripts/tromino-puzzle-gfx2d-wasm.js" type="text/javascript"></script>
     <script defer src="scripts/tromino-puzzle.js" type="text/javascript"></script>
     <script defer src="scripts/app.js" type="text/javascript"></script>
