Revise web app and rename symbols

--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -64,8 +64,8 @@
       <p>Copyright &copy; 2021 Omar Boukli-Hacene.</p>
     </footer>
 
-    <script defer src="scripts/tromino-puzzle-gfx2d-wasm.js" type="text/javascript"></script>
-    <script defer src="scripts/tromino-puzzle.js" type="text/javascript"></script>
+    <script defer src="scripts/trmn/trmn-wasm.js" type="text/javascript"></script>
+    <script defer src="scripts/litro/gfx.js" type="text/javascript"></script>
     <script defer src="scripts/app.js" type="text/javascript"></script>
   </body>
 </html>
