--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -1,73 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Omar Boukli-Hacene">
-    <meta name="application-name" content="Tromino Puzzle">
-    <meta name="description" content="A web app, that makes use of WebAssembly, to solve the tromino puzzle.">
-    <title>Tromino Puzzle</title>
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>Tromino Puzzle</h1>
 
-      <div class="columns">
-        <div class="column">
-          <h2>Hybrid WebAssembly/JavaScript</h2>
-          <p>Pure C solver (WebAssembly) with JavaScript renderer</p>
-          <canvas id="litroCanvas" width="512" height="512"></canvas>
-        </div>
-        <div class="column">
-          <h2>WebAssembly solver and renderer (beta)</h2>
-          <p>Algorithm in pure C, with C++/SDL2 renderer (WebAssembly)</p>
-          <canvas id="canvas" width="512" height="512"></canvas>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Omar Boukli-Hacene">
+  <meta name="application-name" content="Tromino Puzzle">
+  <meta name="description" content="A web app, that makes use of WebAssembly, to solve the tromino puzzle.">
+  <title>Tromino Puzzle</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <script defer src="scripts/trmn/trmn-wasm.js" type="text/javascript"></script>
+  <script defer src="scripts/trmn/trmn.js" type="text/javascript"></script>
+  <script defer src="scripts/litro/gfx.js" type="text/javascript"></script>
+  <script defer src="scripts/litro/litro.js" type="text/javascript"></script>
+  <script defer src="scripts/app.js" type="text/javascript"></script>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Tromino Puzzle</h1>
+    <div class="columns">
+      <div class="column">
+        <h2>Hybrid WebAssembly/JavaScript</h2>
+        <p>Pure C solver (WebAssembly) with JavaScript renderer</p>
+        <canvas id="litroCanvas" width="512" height="512"></canvas>
       </div>
-
-      <form id="puzzleEditorForm">
-        <ul class="flex-outer">
-          <li>
-            <label for="order">Puzzle order</label>
-            <input type="range" id="order" min="0" max="0" value="0" step="1">
-            <div id="orderIndicator" class="indicator">0</div>
-          </li>
-          <li>
-            <label for="markX">Mark X</label>
-            <input
-              type="number"
-              id="markX"
-              placeholder=""
-              min="0"
-              value="0"
-            />
-          </li>
-          <li>
-            <label for="markY">Mark Y</label>
-            <input
-              type="number"
-              id="markY"
-              placeholder=""
-              min="0"
-              value="0"
-            />
-          </li>
-          <li>
-            <button id="solveButton" type="button" disabled>Solve</button>
-          </li>
-        </ul>
-      </form>
+      <div class="column">
+        <h2>WebAssembly solver and renderer (beta)</h2>
+        <p>Algorithm in pure C, with C++/SDL2 renderer (WebAssembly)</p>
+        <canvas id="canvas" width="512" height="512"></canvas>
+      </div>
     </div>
+    <form id="puzzleEditorForm">
+      <ul class="flex-outer">
+        <li>
+          <label for="order">Puzzle order</label>
+          <input type="range" id="order" min="0" max="0" value="0" step="1">
+          <div id="orderIndicator" class="indicator">0</div>
+        </li>
+        <li>
+          <label for="markX">Mark X</label>
+          <input type="number" id="markX" placeholder="" min="0" value="0">
+        </li>
+        <li>
+          <label for="markY">Mark Y</label>
+          <input type="number" id="markY" placeholder="" min="0" value="0">
+        </li>
+        <li>
+          <button id="solveButton" type="button" disabled>Solve</button>
+        </li>
+      </ul>
+    </form>
+  </div>
+  <footer>
+    <p>Copyright &copy; 2021 Omar Boukli-Hacene.</p>
+  </footer>
+</body>
 
-    <footer>
-      <p>Copyright &copy; 2021 Omar Boukli-Hacene.</p>
-    </footer>
-
-    <script defer src="scripts/trmn/trmn-wasm.js" type="text/javascript"></script>
-    <script defer src="scripts/trmn/trmn.js" type="text/javascript"></script>
-    <script defer src="scripts/litro/gfx.js" type="text/javascript"></script>
-    <script defer src="scripts/litro/litro.js" type="text/javascript"></script>
-    <script defer src="scripts/app.js" type="text/javascript"></script>
-  </body>
 </html>
