--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="A web app, that makes use of WebAssembly, to solve the tromino puzzle.">
   <title>Tromino Puzzle</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="images/tromino.svg" sizes="any" type="image/svg+xml">
   <script defer src="scripts/trmn/trmn-wasm.js" type="text/javascript"></script>
   <script defer src="scripts/trmn/trmn.js" type="text/javascript"></script>
   <script defer src="scripts/litro/gfx.js" type="text/javascript"></script>
