--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -24,20 +24,20 @@
       <div class="column">
         <h2>Hybrid WebAssembly/JavaScript</h2>
         <p>Pure C solver (WebAssembly) with JavaScript renderer</p>
-        <canvas id="litroCanvas" width="512" height="512"></canvas>
+        <canvas id="litroCanvas" width="512" height="512" aria-label="Tromino puzzle demo 1" role="img"></canvas>
       </div>
       <div class="column">
         <h2>WebAssembly solver and renderer (beta)</h2>
         <p>Algorithm in pure C, with C++/SDL2 renderer (WebAssembly)</p>
-        <canvas id="canvas" width="512" height="512"></canvas>
+        <canvas id="canvas" width="512" height="512" aria-label="Tromino puzzle demo 2" role="img"></canvas>
       </div>
     </div>
     <form id="puzzleEditorForm">
       <ul class="flex-outer">
         <li>
           <label for="order">Puzzle order</label>
-          <input type="range" id="order" min="0" max="0" value="0" step="1">
-          <div id="orderIndicator" class="indicator">0</div>
+          <input type="range" id="order" min="0" max="0" value="8" step="1">
+          <div class="indicator"><output id="orderIndicator" for="order">0</output></div>
         </li>
         <li>
           <label for="markX">Mark X</label>
@@ -54,7 +54,7 @@
     </form>
   </div>
   <footer>
-    <p>Copyright &copy; 2021 Omar Boukli-Hacene.</p>
+    <p>Copyright &copy; 2022 Omar Boukli-Hacene.</p>
   </footer>
 </body>
 
