Update copyright notice

--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -54,7 +54,7 @@
     </form>
   </div>
   <footer>
-    <p>Copyright &copy; 2022 Omar Boukli-Hacene.</p>
+    <p>Copyright &copy; 2021-2022 Omar Boukli-Hacene.</p>
   </footer>
 </body>
 
