Refactor web app

--- a/emscripten/app/index.html
+++ b/emscripten/app/index.html
@@ -14,6 +14,7 @@
   <script defer src="scripts/trmn/trmn.js" type="text/javascript"></script>
   <script defer src="scripts/litro/gfx.js" type="text/javascript"></script>
   <script defer src="scripts/litro/litro.js" type="text/javascript"></script>
+  <script defer src="scripts/editor.js" type="text/javascript"></script>
   <script defer src="scripts/app.js" type="text/javascript"></script>
 </head>
 
