fix(webapp): Set defaults

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -43,11 +43,11 @@
           </li>
           <li>
             <label for="markX">Mark X</label>
-            <input type="number" id="markX" placeholder="" min="0" value="0">
+            <input type="number" id="markX" placeholder="" min="0" max="0" value="0">
           </li>
           <li>
             <label for="markY">Mark Y</label>
-            <input type="number" id="markY" placeholder="" min="0" value="0">
+            <input type="number" id="markY" placeholder="" min="0" max="0" value="0">
           </li>
           <li>
             <button id="solveButton" type="button" disabled>Solve</button>
